Day-47-Policy-As-Code/secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: golden-secure-pod
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 101 
  containers:
  - name: secure-container
    image: nginxinc/nginx-unprivileged:1.24.0 # Pinned tag!
