Day-47-Policy-As-Code/block-root-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockroot
spec:
  crd:
    spec:
      names:
        kind: K8sBlockRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockroot

        violation[{"msg": msg}] {
          # If the pod does NOT have runAsNonRoot set to true, block it.
          not input.review.object.spec.securityContext.runAsNonRoot
          msg := "POLICY VIOLATION: You cannot run as root! Pods must explicitly set 'securityContext.runAsNonRoot: true'."
        }
