Day-47-Policy-As-Code/enforce-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRoot
metadata:
  name: block-root-globally
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
