Day-47-Policy-As-Code/enforce-tags.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLatestTag
metadata:
  name: block-latest-tag-globally
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
